# HUB-BOT

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml
admin/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
admin/src/: i18n.ts  main.tsx  theme.css
admin/src/api/: client.ts
admin/src/components/: Layout.tsx  ui.tsx
admin/src/screens/: AiSupport.tsx  Blacklist.tsx  BotButtons.tsx  BotImages.tsx  Broadcasts.tsx  Campaigns.tsx  Dashboard.tsx  Login.tsx  Maintenance.tsx  Miniapp.tsx  Notifications.tsx  Partners.tsx  Payments.tsx  Promogroups.tsx  Promos.tsx  Reminders.tsx  Sales.tsx  Servers.tsx  Settings.tsx  Smart.tsx  Tariffs.tsx  Tickets.tsx  Users.tsx
admin/src/state/: app.tsx
docker/: Dockerfile  compose.prod.yml  updater.Dockerfile
docs/: GO-LIVE.md  OVERVIEW.md  TELEMETRY.md
docs-site/: index.md  package-lock.json  package.json
docs-site/.vitepress/: config.mts
docs-site/bot/: channel-gate.md  devices.md  index.md  menu-builder.md  promo.md  purchase.md  referral.md  tickets.md
docs-site/cabinet/: broadcasts.md  campaigns.md  index.md  maintenance.md  promos.md  reminders.md  servers.md  settings.md  tariffs.md  users.md
docs-site/dev/: add-db-model.md  add-payment-gateway.md  architecture.md  contributing.md
docs-site/features/: ai-support.md  backups.md  device-guard.md  site-sales.md  telemetry.md
docs-site/guide/: deploy-vps.md  go-live.md  install.md  migration.md  update.md  what-is.md
docs-site/miniapp/: configuration.md  contract.md  index.md
docs-site/panel/: index.md  mock.md  sync.md  watchdog.md  webhook.md
docs-site/payments/: index.md  refunds.md  settings.md  webhooks.md
docs-site/payments/providers/: antilopay.md  aurapay.md  cloudpayments.md  cryptobot.md  cryptomus.md  freekassa.md  heleket.md  kassa-ai.md  lava.md  manual.md  mulenpay.md  paypalych.md  platega.md  riopay.md  robokassa.md  rollypay.md  severpay.md  telegram-stars.md  wata.md  yookassa.md  yoomoney.md
docs-site/reference/: error-codes.md
docs/adr/: 0001-layered-architecture.md  0002-money-minor-units.md  0003-one-panel-user-per-subscription.md  0004-single-payment-webhook-route.md
docs/context/: 00-overview.md  03-payments.md  04-referral-promo.md  08-feature-matrix.md
docs/design/admin-cabinet/: README.md  admin-cabinet.dc.html
docs/design/miniapp/: README.md  miniapp-8-variants.dc.html  (+1 more)
miniapp/: CONTRACT.md
miniapp/app/: app.css  app.js  index.html  mock.js
scripts/: deploy-docs.sh  gen_error_docs.py  install.sh  mock_panel.py  mock_panel_state.json  update.sh  updater.sh
site/: site.css  site.js
src/bot/: banners.py  cabinet_menu.py  cabinet_text.py  default_menu.py  errors.py  gate.py  keyboards.py  main.py  media.py  menu_render.py  middlewares.py  screen.py
src/core/: config_registry.py  constants.py  enums.py  error_codes.py  security.py
src/web/: app.py
telemetry-server/: Dockerfile  README.md  compose.yml  server.py
tests/fakes/: panel.py
tests/integration/: test_admin_api.py  test_remnawave_client.py  test_remnawave_writes.py
tests/unit/: test_account_link.py  test_audit_regressions.py  test_autopay_card.py  test_bedolaga_import.py  test_bot_error_handler.py  test_cabinet_menu.py  test_cabinet_text.py  test_change_and_topup.py  test_connection_apps.py  test_constructor_purchase.py  test_default_menu.py  test_device_guard.py  test_error_codes.py  test_manual_gateway.py  test_media.py  test_more_gateways.py  test_panel_webhook_verify.py  test_postback.py  test_referral.py  test_renewal_resolution.py  test_reports.py  test_resync.py  test_sales_features.py  test_security.py  test_spec_payload.py  test_telemetry_reporter.py  test_telemetry_server.py  test_updater.py  test_web_auth.py  test_web_error_handler.py  test_winback.py
web/: app.js
(+118 files in other folders)
