[project]
name = "vpn-shop-base"
version = "1.6.5"
description = "Base/core foundation for a Telegram VPN-shop bot + mini-app on the Remnawave panel"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # Telegram bot framework (the bot itself is built later, but FSM storage / types live in the base)
    "aiogram>=3.13,<4",
    # Persistence
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "alembic>=1.13",
    "asyncpg>=0.29",
    # Cache / broker / locks
    # redis-py 8.x aborts idle blocking BRPOP reads -> taskiq worker death-loop
    "redis>=5.0,<8",
    # Background jobs
    "taskiq>=0.11",
    "taskiq-redis>=1.0",
    # Web seam (payment + panel webhooks, health)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # HTTP client for the panel + gateways
    "httpx>=0.27",
    # Multipart parsing for admin media uploads
    "python-multipart>=0.0.9",
    # Config & validation
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    # Crypto (Fernet-encrypted gateway creds, HMAC helpers, initData)
    "cryptography>=43",
    # Fast JSON (webhook body re-serialization fallbacks)
    "orjson>=3.10",
    # Structured logging
    "structlog>=24.1",
    # Encrypted backups
    "pyzipper>=0.3.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "aiosqlite>=0.20",
    "asgi-lifespan>=2.1",
]

[tool.uv]
package = false

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "TID", "RUF"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.ruff.lint.per-file-ignores]
# Alembic autogenerate emits long lines and its own import order — don't fight it.
"src/infrastructure/database/migrations/versions/*" = ["E501", "I001"]
# RU display strings legitimately contain cyrillic homoglyphs.
"src/core/config_registry.py" = ["RUF001"]
"src/bot/**" = ["RUF001"]
# The /dl deep-link bounce page renders a short RU prompt to the user.
"src/web/app.py" = ["RUF001"]
# RU lifecycle/notification messages DM'd to users (autopay, updates, reports…).
"src/infrastructure/taskiq/tasks.py" = ["RUF001"]
# The AI-support prompt + knowledge base are long RU text blocks by nature.
"src/infrastructure/services/ai_support.py" = ["RUF001", "E501"]
# The E-code catalog is RU prose (docs generate from it); tests assert on RU strings.
"src/core/error_codes.py" = ["RUF001", "RUF002", "RUF003", "E501"]
"scripts/gen_error_docs.py" = ["RUF001", "RUF002", "RUF003", "E501"]
"tests/unit/test_error_codes.py" = ["RUF001", "RUF002", "RUF003"]
"tests/unit/test_telemetry_server.py" = ["RUF001", "RUF002", "RUF003"]
"tests/unit/test_telemetry_reporter.py" = ["RUF001", "RUF002", "RUF003"]
# RU scenario print-outs that mirror the user's bug report, verbatim.
"tests/unit/test_change_and_topup.py" = ["RUF001", "RUF002", "RUF003", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
mypy_path = "."
packages = ["src"]
plugins = ["pydantic.mypy"]
strict = true
# Autogenerated Alembic env/migrations are not type-checked.
exclude = ["src/infrastructure/database/migrations/"]
# Async ORM + third-party stubs are noisy; keep strictness where it pays off.
disallow_untyped_decorators = false
warn_return_any = false

[[tool.mypy.overrides]]
module = ["taskiq.*", "taskiq_redis.*", "dishka.*", "pyzipper.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
